--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,8 @@
         <a href="#"><i class="fa-solid icon-ed fa-circle-info"></i> About</a>
       </nav>
     </header>
+    <footer>
+        <p>Designed by Tracy and Festus</p>
+    </footer>
   </body>
 </html>
