Create main page of wireframe

--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,11 @@
         <a href="#"><i class="fa-solid icon-ed fa-circle-info"></i> About</a>
       </nav>
     </header>
+ <section class="sec-wrapper">
+    <div class="movie-disp">
+
+
+    </div>
+    </section>
   </body>
 </html>
