add new js file

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
     </header>
  <section class="sec-wrapper">
     <div class="movie-disp">
-
-
+      <!--Dynamically generated list-->
     </div>
+    <div class="comm-popup"></div>
     </section>
     <footer>
         <p>Designed by Tracy and Festus</p>
