Add and display number of likes

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <nav class="navi">
         <img src="./img/logo.png" alt="page-logo" class="logo" />
         <a href="#"><i class="fa-solid icon-ed fa-house"></i> Home</a>
-        <a href="#"><i class="fa-solid icon-ed fa-film"></i> Movies(6)</a>
+        <a href="#"><i class="fa-solid icon-ed fa-film"></i><span id="movies-count"></span></a>
         <a href="#"><i class="fa-solid icon-ed fa-circle-info"></i> About</a>
       </nav>
     </header>
