add tests and implement comment popup

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MovieLicious</title>
     <script
       src="https://kit.fontawesome.com/00fad0ddbb.js"
       crossorigin="anonymous"
@@ -23,6 +23,7 @@
     <div class="movie-disp">
       <!--Dynamically generated list-->
     </div>
+    <div class="overflow"></div>
     <div class="comm-popup"></div>
     </section>
     <footer>
