--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/00fad0ddbb.js"
       crossorigin="anonymous"
     ></script>
+    <!-- <link rel="icon" type="image/x-icon" href="./src/img/favicon.ico"> -->
   </head>
   <body>
     <header class="header-wrapper">
@@ -25,7 +26,7 @@
     </div>
     <div class="comm-popup"></div>
     </section>
-    <footer>
+    <footer class = "ft-design">
         <p>Designed by Tracy and Festus</p>
     </footer>
   </body>
