Update readme file

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/00fad0ddbb.js"
       crossorigin="anonymous"
     ></script>
-    <!-- <link rel="icon" type="image/x-icon" href="./src/img/favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   </head>
   <body>
     <header class="header-wrapper">
